Fix for project href

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Not much to see here (for now)</h1>
       <p>
         Check out one of my projects:
-        <a href="/memox" class="mx-project-link">MEMOX Community</a>
+        <a href="/memox/" class="mx-project-link">MEMOX Community</a>
       </p>
     </div>
   </body>
