--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="summary" />
     <meta property="og:title" content="Splack" />
     <meta property="og:description" content="Not much to see here (for now)" />
-    <!-- meta property="og:url" content="" / -->
+    <meta property="og:url" content="https://splack.is-a.dev/" />
     <!-- meta property="og:image" url="" / -->
   </head>
   <body>
