--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Splack</title>
     <link rel="stylesheet" href="./static/styles/index.css" />
     <meta property="og:type" content="summary" />
+    <meta property="og:site_name" content="Splack" />
     <meta property="og:title" content="Splack" />
     <meta property="og:description" content="Not much to see here (for now)" />
+    <meta
+      property="og:image"
+      content="https://splack.is-a.dev/static/assets/favicon.png"
+    />
+    <meta property="og:image:alt" content="Splack" />
     <meta property="og:url" content="https://splack.is-a.dev/" />
-    <!-- meta property="og:image" url="" / -->
   </head>
   <body>
     <div class="placeholder-text">
